--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,23 +15,23 @@ jobs:
   pool:
     vmImage: 'xcode9-macos10.13'
   steps:
+  - task: DotNetCoreInstaller@0
+    inputs:
+      packageType: 'sdk'
+      version: '3.0.100-preview4-011223'
+  - bash: ./build.sh --target=azure-pipelines
+    env:
+      COREHOST_TRACE: 0
+      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+      DOTNET_CLI_TELEMETRY_OPTOUT: 1
   # Seems we need this for reportgenerator
   - task: DotNetCoreInstaller@0
     inputs:
       packageType: 'runtime'
       version: '2.0.9'
-  - task: DotNetCoreInstaller@0
-    inputs:
-      packageType: 'sdk'
-      version: '3.0.100-preview4-011223'
-  - bash: ./build.sh --target=azure-pipeline
-    env:
-      COREHOST_TRACE: 0
-      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-      DOTNET_CLI_TELEMETRY_OPTOUT: 1
   - task: CmdLine@2
     inputs:
-      script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)/coverage/*.xml" "-targetdir:$(Build.SourcesDirectory)/coverage/html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+Shorthand.*"' 
+      script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)/coverage/*.xml" "-targetdir:$(Build.SourcesDirectory)/coverage/html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+LetterAvatarService.*"' 
       workingDirectory: '$(Build.SourcesDirectory)/test/LetterAvatarService.Tests/'
   - task: PublishTestResults@2
     inputs:
@@ -52,7 +52,7 @@ jobs:
     inputs:
       packageType: 'sdk'
       version: '3.0.100-preview4-011223'
-  - powershell: .\build.ps1 -Target azure-pipeline
+  - powershell: .\build.ps1 -Target azure-pipelines
     env:
       COREHOST_TRACE: 0
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
