--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,24 +24,20 @@ jobs:
       COREHOST_TRACE: 0
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
-  # Seems we need this for reportgenerator
-  - task: DotNetCoreInstaller@0
-    inputs:
-      packageType: 'runtime'
-      version: '2.0.9'
-  - task: CmdLine@2
-    inputs:
-      script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)/coverage/*.xml" "-targetdir:$(Build.SourcesDirectory)/coverage/html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+LetterAvatarService.*"' 
-      workingDirectory: '$(Build.SourcesDirectory)/test/LetterAvatarService.Tests/'
+  # Can't get this working on OSX builds with the 3.0 target
+  #- task: CmdLine@2
+  #  inputs:
+  #    script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)/coverage/*.xml" "-targetdir:$(Build.SourcesDirectory)/coverage/html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+LetterAvatarService.*"' 
+  #    workingDirectory: '$(Build.SourcesDirectory)/test/LetterAvatarService.Tests/'
   - task: PublishTestResults@2
     inputs:
       testRunner: VSTest
       testResultsFiles: '**/*.trx'
-  - task: PublishCodeCoverageResults@1
-    inputs:
-      codeCoverageTool: 'cobertura'
-      summaryFileLocation: '$(Build.SourcesDirectory)/coverage/results.cobertura.xml'
-      reportDirectory: '$(Build.SourcesDirectory)/coverage/html'
+  #- task: PublishCodeCoverageResults@1
+  #  inputs:
+  #    codeCoverageTool: 'cobertura'
+  #    summaryFileLocation: '$(Build.SourcesDirectory)/coverage/results.cobertura.xml'
+  #    reportDirectory: '$(Build.SourcesDirectory)/coverage/html'
 
 # Run a build on Windows at the same time
 - job: Windows
