--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "letter-avatar-service-web-source",
+  "description": "letter-avatar-service-web-source",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-svelte3": "^1.2.2",
     "polka": "^0.5.0",
     "sirv": "^0.4.0",
     "svelte-preprocess": "^2.9.0"
