--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,8 +27,8 @@ jobs:
   # Can't get this working on OSX builds with the 3.0 target
   #- task: CmdLine@2
   #  inputs:
-  #    script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)/coverage/*.xml" "-targetdir:$(Build.SourcesDirectory)/coverage/html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+LetterAvatarService.*"' 
-  #    workingDirectory: '$(Build.SourcesDirectory)/test/LetterAvatarService.Tests/'
+  #    script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)/coverage/*.xml" "-targetdir:$(Build.SourcesDirectory)/coverage/html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+LetterAvatars.*"' 
+  #    workingDirectory: '$(Build.SourcesDirectory)/test/LetterAvatars.Service.Tests/'
   - task: PublishTestResults@2
     inputs:
       testRunner: VSTest
@@ -55,8 +55,8 @@ jobs:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
   - task: CmdLine@2
     inputs:
-      script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)\coverage\*.xml" "-targetdir:$(Build.SourcesDirectory)\coverage\html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+Shorthand.*"' 
-      workingDirectory: '$(Build.SourcesDirectory)\test\LetterAvatarService.Tests\'
+      script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)\coverage\*.xml" "-targetdir:$(Build.SourcesDirectory)\coverage\html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+LetterAvatars.*"' 
+      workingDirectory: '$(Build.SourcesDirectory)\test\LetterAvatars.Service.Tests\'
   - task: PublishTestResults@2
     inputs:
       testRunner: VSTest
