--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/LetterAvatarService/bin/Debug/netcoreapp3.0/LetterAvatarService.dll",
+            "program": "${workspaceFolder}/src/LetterAvatars.Service/bin/Debug/netcoreapp3.0/LetterAvatars.Service.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/src/LetterAvatarService",
+            "cwd": "${workspaceFolder}/src/LetterAvatars.Service",
             "stopAtEntry": false,
             "launchBrowser": {
                 "enabled": true
