--- a/src/LetterAvatars.Service/LetterAvatars.Service.csproj
+++ b/src/LetterAvatars.Service/LetterAvatars.Service.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LetterAvatars.Generator\LetterAvatars.Generator.csproj" />
+  </ItemGroup>
 </Project>
