Updated travis to build and test instead of testing and publishing (since the artifacts are useless anyway)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ mono: none
 #dotnet: 3.0.100-preview4-011223
 script:
   - sudo snap alias dotnet-sdk.dotnet dotnet
+  - dotnet build
   - dotnet test
-  - dotnet publish
