Refactored the code a bit and moved setup to extension methods

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,13 +15,10 @@
             "cwd": "${workspaceFolder}/src/LetterAvatars.Service",
             "stopAtEntry": false,
             "launchBrowser": {
-                "enabled": true
+                "enabled": false
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "sourceFileMap": {
-                "/Views": "${workspaceFolder}/Views"
             }
         },
         {
