--- a/test/LetterAvatars.Service.Tests/LetterAvatars.Service.Tests.csproj
+++ b/test/LetterAvatars.Service.Tests/LetterAvatars.Service.Tests.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
+    <PackageReference Include="XmlUnit.Core" Version="2.7.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="coverlet.msbuild" Version="2.6.3">
@@ -17,5 +19,9 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="dotnet-reportgenerator-cli" Version="4.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\LetterAvatars.Generator\LetterAvatars.Generator.csproj" />
   </ItemGroup>
 </Project>
