--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -1,7 +1,7 @@
 <Project>
   <PropertyGroup>
     <Authors>Karl-Johan Sjögren</Authors>
-    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionPrefix>1.0.1/VersionPrefix>
     <PackageProjectUrl>https://github.com/karl-sjogren/letter-avatar-service</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/karl-sjogren/letter-avatar-service/blob/develop/LICENSE</PackageLicenseUrl>
     <LangVersion>preview</LangVersion>
