--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,10 @@ jobs:
   pool:
     vmImage: 'xcode9-macos10.13'
   steps:
-  - task: DotNetCoreInstaller@0
+  - task: UseDotNet@2
     inputs:
       packageType: 'sdk'
-      version: '3.0.100-preview9-014004'
+      version: '3.0.100'
   - bash: ./build.sh --target=azure-pipelines
     env:
       COREHOST_TRACE: 0
@@ -52,10 +52,10 @@ jobs:
   pool:
     vmImage: 'windows-2019'
   steps:
-  - task: DotNetCoreInstaller@0
+  - task: UseDotNet@2
     inputs:
       packageType: 'sdk'
-      version: '3.0.100-preview9-014004'
+      version: '3.0.100'
   - powershell: .\build.ps1 -Target azure-pipelines
     env:
       COREHOST_TRACE: 0
