--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/LetterAvatars.Service/bin/Debug/netcoreapp3.0/LetterAvatars.Service.dll",
+            "program": "${workspaceFolder}/src/LetterAvatars.Service/bin/Debug/net5.0/LetterAvatars.Service.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/LetterAvatars.Service",
             "stopAtEntry": false,
