--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -1,7 +1,7 @@
 <Project>
   <PropertyGroup>
     <Authors>Karl-Johan Sjögren</Authors>
-    <VersionPrefix>1.0.2</VersionPrefix>
+    <VersionPrefix>2.0.0</VersionPrefix>
     <PackageProjectUrl>https://github.com/karl-sjogren/letter-avatar-service</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/karl-sjogren/letter-avatar-service/blob/develop/LICENSE</PackageLicenseUrl>
     <LangVersion>preview</LangVersion>
@@ -15,6 +15,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19367-01" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" PrivateAssets="all" />
   </ItemGroup>
 </Project>
