--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ jobs:
 # Run a build on macOS at the same time
 - job: macOS
   pool:
-    vmImage: 'xcode9-macos10.13'
+    vmImage: 'macOS-latest'
   steps:
   - task: UseDotNet@2
     inputs:
@@ -50,7 +50,7 @@ jobs:
 # Run a build on Windows at the same time
 - job: Windows
   pool:
-    vmImage: 'windows-2019'
+    vmImage: 'windows-latest'
   steps:
   - task: UseDotNet@2
     inputs:
