--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-# Only trigger CI builds for the master branch, instead 
-# of every branch. You'll automatically be configured to 
-# build PRs, but you can't currently control that from the YAML directly
-# For details, see https://docs.microsoft.com/en-us/azure/devops/pipelines/build/triggers
 trigger:
   branches:
     include:
@@ -9,13 +5,7 @@ trigger:
     exclude:
     - gh-pages
     - gh-pages-source
-  tags:
-    include:
-      - '*'
 
-# We can run multiple jobs in parallel. For this project
-# I'm running Linux, Windows, and macOS jobs. For syntac details
-# see https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases
 jobs:
 
 # Run a build on macOS at the same time
@@ -24,28 +14,30 @@ jobs:
     vmImage: 'macOS-latest'
   steps:
   - task: UseDotNet@2
+    displayName: 'Install .NET Core'
     inputs:
       packageType: 'sdk'
       version: '5.0.102'
-  - bash: ./build.sh --target=azure-pipelines
-    env:
-      COREHOST_TRACE: 0
-      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-      DOTNET_CLI_TELEMETRY_OPTOUT: 1
-  # Can't get this working on OSX builds with the 3.0 target
-  #- task: CmdLine@2
-  #  inputs:
-  #    script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)/coverage/*.xml" "-targetdir:$(Build.SourcesDirectory)/coverage/html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+LetterAvatars.*"' 
-  #    workingDirectory: '$(Build.SourcesDirectory)/test/LetterAvatars.Service.Tests/'
-  - task: PublishTestResults@2
+  - task: DotNetCoreCLI@2
+    displayName: 'Restore NuGet packages'
     inputs:
-      testRunner: VSTest
-      testResultsFiles: '**/*.trx'
-  #- task: PublishCodeCoverageResults@1
-  #  inputs:
-  #    codeCoverageTool: 'cobertura'
-  #    summaryFileLocation: '$(Build.SourcesDirectory)/coverage/results.cobertura.xml'
-  #    reportDirectory: '$(Build.SourcesDirectory)/coverage/html'
+      command: 'restore'
+      projects: '$(Build.SourcesDirectory)/LetterAvatars.sln'
+      feedsToUse: 'config'
+      nugetConfigPath: '$(Build.SourcesDirectory)/nuget.config'
+      verbosityRestore: 'Minimal'
+  - task: DotNetCoreCLI@2
+    displayName: 'Run tests'
+    inputs:
+      command: 'test'
+      projects: '**/*.Tests.csproj'
+      arguments: '--configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
+      publishTestResults: true
+  - task: PublishCodeCoverageResults@1
+    displayName: 'Publish Code Coverage Report'
+    inputs:
+      codeCoverageTool: 'Cobertura'
+      summaryFileLocation: '$(Build.SourcesDirectory)/**/coverage.cobertura.xml'
 
 # Run a build on Windows at the same time
 - job: Windows
@@ -53,24 +45,27 @@ jobs:
     vmImage: 'windows-latest'
   steps:
   - task: UseDotNet@2
+    displayName: 'Install .NET Core'
     inputs:
       packageType: 'sdk'
       version: '5.0.102'
-  - powershell: .\build.ps1 -Target azure-pipelines
-    env:
-      COREHOST_TRACE: 0
-      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-      DOTNET_CLI_TELEMETRY_OPTOUT: 1
-  - task: CmdLine@2
+  - task: DotNetCoreCLI@2
+    displayName: 'Restore NuGet packages'
     inputs:
-      script: 'dotnet reportgenerator "-reports:$(Build.SourcesDirectory)\coverage\*.xml" "-targetdir:$(Build.SourcesDirectory)\coverage\html" -reporttypes:HtmlInline_AzurePipelines "-assemblyfilters:+LetterAvatars.*"' 
-      workingDirectory: '$(Build.SourcesDirectory)\test\LetterAvatars.Service.Tests\'
-  - task: PublishTestResults@2
+      command: 'restore'
+      projects: '$(Build.SourcesDirectory)/LetterAvatars.sln'
+      feedsToUse: 'config'
+      nugetConfigPath: '$(Build.SourcesDirectory)/nuget.config'
+      verbosityRestore: 'Minimal'
+  - task: DotNetCoreCLI@2
+    displayName: 'Run tests'
     inputs:
-      testRunner: VSTest
-      testResultsFiles: '**/*.trx'
+      command: 'test'
+      projects: '**/*.Tests.csproj'
+      arguments: '--configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
+      publishTestResults: true
   - task: PublishCodeCoverageResults@1
+    displayName: 'Publish Code Coverage Report'
     inputs:
-      codeCoverageTool: 'cobertura'
-      summaryFileLocation: '$(Build.SourcesDirectory)\coverage\results.cobertura.xml'
-      reportDirectory: '$(Build.SourcesDirectory)\coverage\html'
+      codeCoverageTool: 'Cobertura'
+      summaryFileLocation: '$(Build.SourcesDirectory)/**/coverage.cobertura.xml'
