--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ mono: none
 script:
   - sudo snap alias dotnet-sdk.dotnet dotnet
   - dotnet build
-  - dotnet test
+  - dotnet test --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
