--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,10 @@
 {
     "recommendations": [
-        "formulahendry.dotnet-test-explorer",
-        "ms-vscode.csharp",
-        "eamodio.gitlens"
+        "ms-dotnettools.csharp",
+        "ms-dotnettools.csdevkit",
+        "editorconfig.editorconfig",
+        "eamodio.gitlens",
+        "github.vscode-github-actions",
+        "editorconfig.editorconfig",
     ]
 }
