--- a/src/LetterAvatars.Service/appsettings.json
+++ b/src/LetterAvatars.Service/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AvatarMiddleware": {
+    "Path": "/avatars"
+  }
 }
