--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -167,7 +167,7 @@ jobs:
       run: dotnet restore --verbosity minimal
 
     - name: Pack project
-      run: dotnet pack ./src/RobotsTxt/RobotsTxt.csproj --configuration Release --output artifacts
+      run: dotnet pack ./src/LetterAvatars.AspNetCore/LetterAvatars.AspNetCore.csproj --configuration Release --output artifacts
 
     - name: Upload packages
       uses: actions/upload-artifact@v4
