--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,7 +144,7 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: coverage-report/Cobertura.xml
+        files: coverage-report/Cobertura.xml
 
     - name: Upload coverage history
       uses: actions/upload-artifact@v4.3.0
